# django-contacts

./: MANIFEST.in  README.rst  pyproject.toml
contacts/: admin.py  forms.py  mixins.py  models.py  tests.py  utils.py  views.py
contacts/migrations/: 0001_initial.py  0002_rename_address_label_contactaddress_name_and_more.py  0003_historicalcontact_historicalcontactaddress_and_more.py  0004_remove_contactaddress_building_number_and_more.py
requirements/: base.txt  dev.txt
